--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,35 +8,42 @@
   <!-- SEO Meta Tags - O'zbek tilida -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <meta name="description"
-    content="EduShare School - O'quvchilar bir-birlariga o'rgatadigan va o'rganadigan peer-to-peer ta'lim platformasi. Dasturlash, matematika, fan va tillar bo'yicha bepul onlayn kurslar. Ruslan Xusenov tomonidan yaratilgan." />
+    content="EduShare School — O'zbekistondagi bepul onlayn ta'lim platformasi. O'quvchilar bir-birlariga o'rgatadi va o'rganadi. Dasturlash, matematika, sport, musiqa, fan va tillar bo'yicha bepul kurslar. Ruslan Xusenov va Elbek Sharofov tomonidan yaratilgan." />
   <meta name="keywords"
-    content="EduShare, edushare, edushare.uz, onlayn ta'lim, bepul kurslar, dasturlash kurslari, matematika, fan, til o'rganish, Ruslan Xusenov, EduShare, o'zbek ta'lim platformasi, peer learning, online education, O'zbekiston ta'lim" />
-  <meta name="author" content="Ruslan Xusenov - EduShare School" />
+    content="EduShare, edushare, edushare.uz, EduShare School, bepul ta'lim, bepul onlayn ta'lim, bepul kurslar, bepul onlayn kurslar, online ta'lim, onlayn ta'lim platformasi, o'zbek ta'lim platformasi, Ruslan Xusenov, Elbek Sharofov, Ruslan Xusenov EduShare, Elbek Sharofov EduShare, dasturlash kurslari, matematika kurslari, ingliz tili kurslari, sport, musiqa, fan, IT kurslar, peer learning, online education, O'zbekiston ta'lim, ta'lim platformasi, o'rganish, o'qish, bilim, talim, bepul talim, edushare uz" />
+  <meta name="author" content="Ruslan Xusenov, Elbek Sharofov — EduShare School" />
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="language" content="Uzbek" />
   <meta http-equiv="content-language" content="uz" />
-  <meta name="creator" content="Ruslan Xusenov" />
+  <meta name="creator" content="Ruslan Xusenov, Elbek Sharofov" />
   <meta name="publisher" content="EduShare School" />
-  <meta name="copyright" content="EduShare School - Ruslan Xusenov" />
+  <meta name="copyright" content="EduShare School — Ruslan Xusenov, Elbek Sharofov" />
   <meta name="theme-color" content="#667eea" />
+  <meta name="geo.region" content="UZ" />
+  <meta name="geo.placename" content="O'zbekiston" />
+  <meta name="revisit-after" content="3 days" />
+  <meta name="rating" content="general" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://edushare.uz/" />
-  <meta property="og:title" content="EduShare School - O'quvchilar O'quvchilarga O'rgatadi | Ruslan Xusenov" />
+  <meta property="og:title" content="EduShare School — Bepul Onlayn Ta'lim Platformasi | Ruslan Xusenov & Elbek Sharofov" />
   <meta property="og:description"
-    content="Bizning peer-to-peer ta'lim platformamizga qo'shiling. O'quvchilardan o'rganing va bilimingizni ulashing. Ruslan Xusenov tomonidan yaratilgan." />
-  <meta property="og:image" content="/og-image.jpg" />
+    content="O'zbekistondagi bepul onlayn ta'lim platformasi. Dasturlash, matematika, sport, musiqa va boshqa fanlar bo'yicha bepul kurslar. Ruslan Xusenov va Elbek Sharofov tomonidan yaratilgan." />
+  <meta property="og:image" content="https://edushare.uz/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="EduShare School — Bepul Onlayn Ta'lim Platformasi" />
   <meta property="og:locale" content="uz_UZ" />
   <meta property="og:site_name" content="EduShare School" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://edushare.uz/" />
-  <meta property="twitter:title" content="EduShare School - O'quvchilar O'quvchilarga O'rgatadi | Ruslan Xusenov" />
+  <meta property="twitter:title" content="EduShare School — Bepul Onlayn Ta'lim Platformasi | Ruslan Xusenov & Elbek Sharofov" />
   <meta property="twitter:description"
-    content="Bizning peer-to-peer ta'lim platformamizga qo'shiling. O'quvchilardan o'rganing va bilimingizni ulashing. Ruslan Xusenov loyihasi." />
-  <meta property="twitter:image" content="/og-image.jpg" />
+    content="O'zbekistondagi bepul ta'lim platformasi. Dasturlash, sport, musiqa, matematika va ko'p fanlar bo'yicha bepul kurslar. Ruslan Xusenov va Elbek Sharofov loyihasi." />
+  <meta property="twitter:image" content="https://edushare.uz/og-image.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
@@ -54,23 +61,36 @@
   <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
   <link rel="canonical" href="https://edushare.uz/" />
 
-  <title>EduShare School - O'quvchilar O'quvchilarga O'rgatadi | Ruslan Xusenov</title>
+  <title>EduShare School — Bepul Onlayn Ta'lim Platformasi | Ruslan Xusenov & Elbek Sharofov</title>
 
-  <!-- Structured Data (JSON-LD) -->
+  <!-- Structured Data (JSON-LD) — Organization -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "EducationalOrganization",
       "name": "EduShare School",
-      "alternateName": "EduShare",
-      "description": "O'quvchilar bir-birlariga o'rgatadigan va o'rganadigan peer-to-peer ta'lim platformasi. Ruslan Xusenov tomonidan yaratilgan.",
+      "alternateName": ["EduShare", "edushare.uz", "EduShare.uz"],
+      "description": "O'zbekistondagi bepul onlayn ta'lim platformasi. O'quvchilar bir-birlariga o'rgatadi va o'rganadi. Dasturlash, matematika, sport, musiqa va boshqa fanlar bo'yicha bepul kurslar.",
       "url": "https://edushare.uz",
       "logo": "https://edushare.uz/logo.png",
-      "founder": {
-        "@type": "Person",
-        "name": "Ruslan Xusenov",
-        "jobTitle": "Founder & Developer"
-      },
+      "image": "https://edushare.uz/og-image.jpg",
+      "foundingDate": "2025",
+      "founder": [
+        {
+          "@type": "Person",
+          "name": "Ruslan Xusenov",
+          "jobTitle": "Founder & Lead Developer",
+          "url": "https://edushare.uz",
+          "sameAs": []
+        },
+        {
+          "@type": "Person",
+          "name": "Elbek Sharofov",
+          "jobTitle": "Co-Founder",
+          "url": "https://edushare.uz",
+          "sameAs": []
+        }
+      ],
       "contactPoint": {
         "@type": "ContactPoint",
         "contactType": "Customer Support",
@@ -87,9 +107,96 @@
         "https://instagram.com/edushare"
       ],
       "areaServed": "O'zbekiston",
-      "inLanguage": "uz"
+      "inLanguage": ["uz", "ru", "en"],
+      "keywords": "bepul ta'lim, bepul kurslar, onlayn ta'lim, EduShare, Ruslan Xusenov, Elbek Sharofov"
     }
-    </script>
+  </script>
+
+  <!-- Structured Data (JSON-LD) — WebSite with Search -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "EduShare School",
+      "alternateName": "EduShare",
+      "url": "https://edushare.uz",
+      "description": "Bepul onlayn ta'lim platformasi — Ruslan Xusenov va Elbek Sharofov tomonidan yaratilgan",
+      "inLanguage": "uz",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://edushare.uz/courses?search={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
+
+  <!-- Structured Data (JSON-LD) — Persons for Google Knowledge Panel -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Ruslan Xusenov",
+      "jobTitle": "Founder & Developer",
+      "worksFor": {
+        "@type": "EducationalOrganization",
+        "name": "EduShare School",
+        "url": "https://edushare.uz"
+      },
+      "description": "EduShare School bepul onlayn ta'lim platformasining asoschisi va dasturchi",
+      "knowsAbout": ["Web Development", "Education Technology", "Online Learning"],
+      "nationality": "Uzbek"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Elbek Sharofov",
+      "jobTitle": "Co-Founder",
+      "worksFor": {
+        "@type": "EducationalOrganization",
+        "name": "EduShare School",
+        "url": "https://edushare.uz"
+      },
+      "description": "EduShare School bepul onlayn ta'lim platformasining hammuassisi",
+      "knowsAbout": ["Education", "Online Learning"],
+      "nationality": "Uzbek"
+    }
+  </script>
+
+  <!-- Structured Data (JSON-LD) — FAQ for Rich Snippets -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "EduShare nima?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "EduShare School — bu O'zbekistondagi bepul onlayn ta'lim platformasi. Bu yerda o'quvchilar bir-birlariga o'rgatadi va o'rganadi. Dasturlash, matematika, sport, musiqa va boshqa fanlar bo'yicha bepul kurslar mavjud."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "EduShare'ni kim yaratgan?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "EduShare School platformasini Ruslan Xusenov (Founder & Lead Developer) va Elbek Sharofov (Co-Founder) yaratgan."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "EduShare bepulmi?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ha, EduShare School butunlay bepul ta'lim platformasi. Barcha kurslar va darsliklar bepul taqdim etiladi."
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
